--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
         <ul class="contacts">
           <li class="paragraph-contacts">
             <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+              ><svg class="link icon-mail"></svg>info@devstudio.com</a
             >
           </li>
           <li class="paragraph-contacts">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111"
+              ><svg class="link icon-tel"></svg>+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -59,28 +61,28 @@
         <div class="container">
           <h2 class="title-large visually-hidden">Наши преимущества</h2>
           <ul class="list-advantages">
-            <li class="paragraph-advantages">
+            <li class="paragraph-advantages icon-antenna">
               <h3 class="title-advantages-list">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="text-advantages-list">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="paragraph-advantages">
+            <li class="paragraph-advantages icon-clock">
               <h3 class="title-advantages-list">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="text-advantages-list">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="paragraph-advantages">
+            <li class="paragraph-advantages icon-diagram">
               <h3 class="title-advantages-list">ПЛАНИРОВАНИЕ</h3>
               <p class="text-advantages-list">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="paragraph-advantages">
+            <li class="paragraph-advantages icon-astronaut">
               <h3 class="title-advantages-list">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="text-advantages-list">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -189,9 +191,37 @@
       </section>
     </main>
 
+    <!-- Section customers -->
+    <section class="section">
+      <div class="container">
+        <h2 class="title-large">Постоянные клиенты</h2>
+        <ul class="list-customers">
+          <li class="paragraph-customers">
+            <svg class="client 1" width="170"></svg>
+          </li>
+          <li class="paragraph-customers">
+            <svg class="client 2" width="170"></svg>
+          </li>
+          <li class="paragraph-customers">
+            <svg class="client 3" width="170"></svg>
+          </li>
+          <li class="paragraph-customers">
+            <svg class="client 4" width="170"></svg>
+          </li>
+          <li class="paragraph-customers">
+            <svg class="client 5" width="170"></svg>
+          </li>
+          <li class="paragraph-customers">
+            <svg class="client 6" width="170"></svg>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Section footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
+        <div class="footer-address">
         <a class="logo" href="">Web<span class="logo-right">Studio</span></a>
         <address>
           <ul class="address">
@@ -208,6 +238,24 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="footer-messengers">
+        <h2 class="title-messengers">ПРИСОЕДИНЯЙТЕСЬ</h2>
+        <ul class="list-messengers">
+          <li class="paragraph-messengers">
+            <svg class="icon icon-instagram" width=""></svg>
+          </li>
+          <li class="paragraph-messengers">
+            <svg class="icon icon-twitter" width=""></svg>
+          </li>
+          <li class="paragraph-messengers">
+            <svg class="icon icon-facebook" width=""></svg>
+          </li>
+          <li class="paragraph-messengers">
+            <svg class="icon icon-linkedin" width=""></svg>
+          </li>
+        </ul>
+      </div>
       </div>
     </footer>
   </body>
