--- a/portfolio.html
+++ b/portfolio.html
@@ -38,11 +38,11 @@
         <ul class="contacts">
           <li class="paragraph-contacts">
             <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+              ><svg class="link icon-mail"></svg>info@devstudio.com</a
             >
           </li>
           <li class="paragraph-contacts">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111"><svg class="link icon-tel"></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -216,7 +216,8 @@
 
     <!-- Section footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
+        <div class="footer-address">
         <a class="logo" href="">Web<span class="logo-right">Studio</span></a>
         <address>
           <ul class="address">
@@ -233,6 +234,24 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="footer-messengers">
+        <h2 class="title-messengers">ПРИСОЕДИНЯЙТЕСЬ</h2>
+        <ul class="list-messengers">
+          <li class="paragraph-messengers">
+            <svg class="icon icon-instagram" width=""></svg>
+          </li>
+          <li class="paragraph-messengers">
+            <svg class="icon icon-twitter" width=""></svg>
+          </li>
+          <li class="paragraph-messengers">
+            <svg class="icon icon-facebook" width=""></svg>
+          </li>
+          <li class="paragraph-messengers">
+            <svg class="icon icon-linkedin" width=""></svg>
+          </li>
+        </ul>
+      </div>
       </div>
     </footer>
   </body>
