ДЗ-4 на проверку 28.04.2022

--- a/index.html
+++ b/index.html
@@ -38,12 +38,20 @@
         <ul class="contacts">
           <li class="paragraph-contacts">
             <a class="link" href="mailto:info@devstudio.com"
-              ><svg class="link icon-mail"></svg>info@devstudio.com</a
+              ><svg class="link icon-mail">
+                <use
+                  href="./images/icons.svg/contacts/contacts-sprite.svg#envelope"
+                ></use></svg
+              >info@devstudio.com</a
             >
           </li>
           <li class="paragraph-contacts">
             <a class="link" href="tel:+380961111111"
-              ><svg class="link icon-tel"></svg>+38 096 111 11 11</a
+              ><svg class="link icon-tel">
+                <use
+                  href="./images/icons.svg/contacts/contacts-sprite.svg#smartphone"
+                ></use></svg
+              >+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -145,6 +153,44 @@
               <div class="box-team-list">
                 <h3 class="title-team-list">Игорь Демьяненко</h3>
                 <p class="text-team-list">Product Designer</p>
+                <ul class="list-team-messengers">
+                  <li class="paragraph-team-messengers">
+                    <a class="instagram" href="https://www.instagram.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-instagram">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#instagram"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="twitter" href="https://www.twitter.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-twitter">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#twitter"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-facebook">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#facebook"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-linkedin">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#linkedin"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="paragraph-team">
@@ -158,6 +204,44 @@
               <div class="box-team-list">
                 <h3 class="title-team-list">Ольга Репина</h3>
                 <p class="text-team-list">Frontend Developer</p>
+                <ul class="list-team-messengers">
+                  <li class="paragraph-team-messengers">
+                    <a class="instagram" href="https://www.instagram.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-instagram">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#instagram"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="twitter" href="https://www.twitter.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-twitter">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#twitter"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-facebook">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#facebook"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-linkedin">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#linkedin"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="paragraph-team">
@@ -171,6 +255,44 @@
               <div class="box-team-list">
                 <h3 class="title-team-list">Николай Тарасов</h3>
                 <p class="text-team-list">Marketing</p>
+                <ul class="list-team-messengers">
+                  <li class="paragraph-team-messengers">
+                    <a class="instagram" href="https://www.instagram.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-instagram">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#instagram"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="twitter" href="https://www.twitter.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-twitter">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#twitter"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-facebook">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#facebook"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-linkedin">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#linkedin"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="paragraph-team">
@@ -184,6 +306,44 @@
               <div class="box-team-list">
                 <h3 class="title-team-list">Михаил Ермаков</h3>
                 <p class="text-team-list">UI Designer</p>
+                <ul class="list-team-messengers">
+                  <li class="paragraph-team-messengers">
+                    <a class="instagram" href="https://www.instagram.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-instagram">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#instagram"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="twitter" href="https://www.twitter.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-twitter">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#twitter"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-facebook">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#facebook"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="paragraph-team-messengers">
+                    <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
+                    <svg class="icon-team icon-linkedin">
+                      <use
+                        href="./images/icons.svg/messengers/messengers-sprite.svg#linkedin"
+                      ></use>
+                    </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -197,22 +357,46 @@
         <h2 class="title-large">Постоянные клиенты</h2>
         <ul class="list-customers">
           <li class="paragraph-customers">
-            <svg class="client 1" width="170"></svg>
+            <svg class="client 1">
+              <use
+                href="./images/icons.svg/customers/customers-sprite.svg#client-1"
+              ></use>
+            </svg>
           </li>
           <li class="paragraph-customers">
-            <svg class="client 2" width="170"></svg>
+            <svg class="client 2">
+              <use
+                href="./images/icons.svg/customers/customers-sprite.svg#client-2"
+              ></use>
+            </svg>
           </li>
           <li class="paragraph-customers">
-            <svg class="client 3" width="170"></svg>
+            <svg class="client 3">
+              <use
+                href="./images/icons.svg/customers/customers-sprite.svg#client-3"
+              ></use>
+            </svg>
           </li>
           <li class="paragraph-customers">
-            <svg class="client 4" width="170"></svg>
+            <svg class="client 4">
+              <use
+                href="./images/icons.svg/customers/customers-sprite.svg#client-4"
+              ></use>
+            </svg>
           </li>
           <li class="paragraph-customers">
-            <svg class="client 5" width="170"></svg>
+            <svg class="client 5">
+              <use
+                href="./images/icons.svg/customers/customers-sprite.svg#client-5"
+              ></use>
+            </svg>
           </li>
           <li class="paragraph-customers">
-            <svg class="client 6" width="170"></svg>
+            <svg class="client 6">
+              <use
+                href="./images/icons.svg/customers/customers-sprite.svg#client-6"
+              ></use>
+            </svg>
           </li>
         </ul>
       </div>
@@ -222,40 +406,64 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-address">
-        <a class="logo" href="">Web<span class="logo-right">Studio</span></a>
-        <address>
-          <ul class="address">
-            <li class="paragraph-address">
-              <a class="link-address" href=""
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+          <a class="logo" href="">Web<span class="logo-right">Studio</span></a>
+          <address>
+            <ul class="address">
+              <li class="paragraph-address">
+                <a class="link-address" href=""
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="paragraph-address">
+                <a class="link" href="">info@devstudio.com</a>
+              </li>
+              <li class="paragraph-address">
+                <a class="link" href="">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-messengers">
+          <h2 class="title-messengers">ПРИСОЕДИНЯЙТЕСЬ</h2>
+          <ul class="list-messengers">
+            <li class="paragraph-messengers">
+              <a class="instagram" href="https://www.instagram.com" target="_blank" rel="noreferrer noopener">
+              <svg class="icon icon-instagram">
+                <use
+                  href="./images/icons.svg/messengers/messengers-sprite.svg#instagram"
+                ></use>
+              </svg>
+              </a>
             </li>
-            <li class="paragraph-address">
-              <a class="link" href="">info@devstudio.com</a>
+            <li class="paragraph-messengers">
+              <a class="twitter" href="https://www.twitter.com" target="_blank" rel="noreferrer noopener">
+              <svg class="icon icon-twitter">
+                <use
+                  href="./images/icons.svg/messengers/messengers-sprite.svg#twitter"
+                ></use>
+              </svg>
+              </a>
             </li>
-            <li class="paragraph-address">
-              <a class="link" href="">+38 099 111 11 11</a>
+            <li class="paragraph-messengers">
+              <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
+              <svg class="icon icon-facebook">
+                <use
+                  href="./images/icons.svg/messengers/messengers-sprite.svg#facebook"
+                ></use>
+              </svg>
+              </a>
+            </li>
+            <li class="paragraph-messengers">
+              <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
+              <svg class="icon icon-linkedin">
+                <use
+                  href="./images/icons.svg/messengers/messengers-sprite.svg#linkedin"
+                ></use>
+              </svg>
+              </a>
             </li>
           </ul>
-        </address>
-      </div>
-      <div class="footer-messengers">
-        <h2 class="title-messengers">ПРИСОЕДИНЯЙТЕСЬ</h2>
-        <ul class="list-messengers">
-          <li class="paragraph-messengers">
-            <svg class="icon icon-instagram" width=""></svg>
-          </li>
-          <li class="paragraph-messengers">
-            <svg class="icon icon-twitter" width=""></svg>
-          </li>
-          <li class="paragraph-messengers">
-            <svg class="icon icon-facebook" width=""></svg>
-          </li>
-          <li class="paragraph-messengers">
-            <svg class="icon icon-linkedin" width=""></svg>
-          </li>
-        </ul>
-      </div>
+        </div>
       </div>
     </footer>
   </body>
