--- a/portfolio.html
+++ b/portfolio.html
@@ -25,19 +25,21 @@
           <a class="logo" href="">Web<span class="logo-right">Studio</span></a>
           <ul class="navigator">
             <li class="paragraph-navigator">
-              <a class="link" href="index.html">Студия</a>
+              <a class="link-navigator" href="index.html">Студия</a>
             </li>
             <li class="paragraph-navigator">
-              <a class="link current" href="portfolio.html">Портфолио</a>
+              <a class="link-navigator current" href="portfolio.html"
+                >Портфолио</a
+              >
             </li>
             <li class="paragraph-navigator">
-              <a class="link" href="">Контакты</a>
+              <a class="link-navigator" href="">Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="contacts">
           <li class="paragraph-contacts">
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link link-contacts" href="mailto:info@devstudio.com"
               ><svg class="link icon-mail">
                 <use
                   href="./images/icons.svg/contacts/contacts-sprite.svg#envelope"
@@ -46,7 +48,7 @@
             >
           </li>
           <li class="paragraph-contacts">
-            <a class="link" href="tel:+380961111111"
+            <a class="link link-contacts" href="tel:+380961111111"
               ><svg class="link icon-tel">
                 <use
                   href="./images/icons.svg/contacts/contacts-sprite.svg#smartphone"
@@ -250,7 +252,7 @@
           <ul class="list-messengers">
             <li class="paragraph-messengers">
               <a
-                class="instagram"
+                class="link-messengers instagram"
                 href="https://www.instagram.com"
                 target="_blank"
                 rel="noreferrer noopener"
@@ -264,7 +266,7 @@
             </li>
             <li class="paragraph-messengers">
               <a
-                class="twitter"
+                class="link-messengers twitter"
                 href="https://www.twitter.com"
                 target="_blank"
                 rel="noreferrer noopener"
@@ -278,7 +280,7 @@
             </li>
             <li class="paragraph-messengers">
               <a
-                class="facebook"
+                class="link-messengers facebook"
                 href="https://www.facebook.com"
                 target="_blank"
                 rel="noreferrer noopener"
@@ -292,7 +294,7 @@
             </li>
             <li class="paragraph-messengers">
               <a
-                class="linkedin"
+                class="link-messengers linkedin"
                 href="https://www.linkedin.com"
                 target="_blank"
                 rel="noreferrer noopener"
